--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "beatsync-clone",
   "version": "1.0.0",
-  "description": "Small production-ready Beatsync-style music sync app",
+  "description": "Beatsync-style music sync app with YouTube search & playlist",
   "main": "src/server.js",
   "scripts": {
     "start": "NODE_ENV=production node src/server.js",
@@ -14,6 +14,10 @@
     "helmet": "^7.0.0",
     "nanoid": "^5.0.0",
     "pino": "^9.0.0",
-    "socket.io": "^4.7.0"
+    "socket.io": "^4.7.0",
+    "node-fetch": "^3.3.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
